...
        Padding(
          padding: const EdgeInsets.all(16.0),
          child: Column(
            children: [
              const Padding(
                padding: EdgeInsets.all(8.0),
                child: Text("No recorded budget for this month",
                    style: TextStyles.optionTextStyle),
              ),
              insertBudgetButton(),
            ],
          ),
        ),
...
    }).toList();
  }

  /// returns an instance of Update Budget button
  CustomButton updateBudgetButton(Budget budget) {
    return CustomButton(
        key: const ValueKey('update-button'),
        text: "Update Budget",
        onTap: () {
          showDialog(
            context: context,
            builder: (BuildContext context) {
              return AlertDialog(
...
                content: Padding(
                  padding: const EdgeInsets.all(8.0),
                  child: Form(
                    child: Column(
                      children: <Widget>[
                        NumericFormField(
                            key: const ValueKey('update-field'),
                            labelText: "Budget",
                            hintText: "Insert amount",
                            controller: _amountController),
                        CustomButton(
                          key: const ValueKey('update-budget-button'),
                          text: "Update",
                          onTap: () async {
                            if (_amountController.text.isEmpty) {
                              ScaffoldMessenger.of(context)
                                  .showSnackBar(const SnackBar(
                                content: Text('Insert budget'),
...
                                      child: Text(
                                        "WARNING! Updating your budget now would reset the current COINS multiplier. Do you want to proceed?",
                                        softWrap: true,
                                      ),
                                    ),
                                    TextButton(
                                      key: const ValueKey('yes-button'),
                                      child: const Text('Yes'),
                                      onPressed: () {
                                        String id = budget.id;
                                        //TODO: reset multiplier here
                                        int selectedMonth =
                                            DateTime.now().month;
...
        });
  }

  /// returns an instance of Insert Budget button
  CustomButton insertBudgetButton() {
    return CustomButton(
        key: const ValueKey('insert-button'),
        text: "Insert Budget",
        onTap: () {
          showDialog(
            context: context,
            builder: (BuildContext context) {
              return AlertDialog(
...
                content: Padding(
                  padding: const EdgeInsets.all(8.0),
                  child: Form(
                    child: Column(
                      children: <Widget>[
                        NumericFormField(
                            key: const ValueKey('insert-field'),
                            labelText: "Budget",
                            hintText: "Insert amount",
                            controller: _amountController),
                        CustomButton(
                          key: const ValueKey('record-budget-button'),
                          text: "Record",
                          onTap: () async {
                            if (_amountController.text.isEmpty) {
                              ScaffoldMessenger.of(context)
                                  .showSnackBar(const SnackBar(
                                content: Text('Insert budget'),
...
      double sumExpense, double budgetThisMonth) {
    double remainingBudget = budgetThisMonth - sumExpense;
    double percentBudgetRemaining = remainingBudget / budgetThisMonth;
    String percentBudgetRemainingString =
        "${(percentBudgetRemaining * 100).toStringAsFixed(2)}%";
    return CircularPercentIndicator(
      key: const ValueKey('budget-chart'),
      radius: 100.0,
      lineWidth: 20.0,
      animation: true,
      percent: percentBudgetRemaining.abs() >= 1
          ? 1.0
          : percentBudgetRemaining.abs(),
...
