...
                ),
                const SizedBox(
                  height: 30,
                ),
                // username form
                CustomFormField(
                    key: const ValueKey('username-field'),
                    hintText: 'Your username',
                    labelText: 'Username',
                    controller: _usernameController),
                // password form
                const SizedBox(
                  height: 24,
                ),
                // email form
                CustomFormField(
                    key: const ValueKey('email-field'),
                    hintText: 'Your email address',
                    labelText: 'Email',
                    controller: _emailController),
                // password form
                const SizedBox(
                  height: 24,
                ),
                PasswordField(
                    key: const ValueKey('password-field'),
                    helperText: 'No more than 25 characters',
                    labelText: 'Password',
                    controller: _passwordController),
                const SizedBox(
                  height: 24,
                ),
                CustomButton(
                  key: const ValueKey('sign-up-button'),
                  text: "Sign Up",
                  onTap: () async {
                    await _supabaseClient
                        .signUpUser(context, email: email, password: password)
                        .then((value) {
                      if (value) {
...
