...

  /// returns drop down button for the category list
  Widget dropDownCategory(List<Category> categoryList) {
    if (categoryList.isEmpty) return const LinearProgressIndicator();

    dropdownButton = CustomDropdownButton(
      key: const ValueKey('category-dropdown'),
      menuItems: categoryList.map((e) => e.name).toList(),
      title: "Category: ",
      hint: "Select a category",
    );
    return dropdownButton;
  }
...
          padding: const EdgeInsets.symmetric(vertical: 20.0, horizontal: 50.0),
          child: Form(
            child: Column(
              children: <Widget>[
                const SizedBox(height: 20.0),
                NumericFormField(
                  key: const ValueKey('amount-field'),
                  labelText: 'Amount',
                  controller: _amountController,
                ),
                const SizedBox(height: 20.0),
                Row(
                  mainAxisAlignment: MainAxisAlignment.spaceBetween,
...
                  }
                  final incomeDropDown = dropDownCategory(value.incomeCatList);
                  return incomeDropDown;
                })),
                const SizedBox(height: 20.0),
                CustomFormField(
                  key: const ValueKey('notes-field'),
                  labelText: 'Notes',
                  controller: _notesController,
                ),
                const SizedBox(height: 20.0),
                recordButton(),
              ],
...
    );
  }

  /// returns an instance of Record button which insert the transaction to the database upon pressed
  CustomButton recordButton() {
    return CustomButton(
      key: const ValueKey('record-button'),
      text: "Record",
      onTap: () {
        if (_amountController.text.isEmpty) {
          ScaffoldMessenger.of(context).showSnackBar(const SnackBar(
            content: Text('Insert amount'),
            duration: Duration(seconds: 2),
...
