...
                List<Category> expenseCatList = value2.expenseCatList;
                if (expenseCatList.isEmpty) {
                  return const CircularProgressIndicator();
                }
                Map<Category, double> expenseBreakdownByCat =
                    _breakDownByCategory(expenseCatList, expenseList);
                return customPieChart(expenseBreakdownByCat, 'expense-chart');
              },
            ),
          ),
        ),
        const SizedBox(
          height: 16.0,
...
                List<Category> incomeCatList = value2.incomeCatList;
                if (incomeCatList.isEmpty) {
                  return const CircularProgressIndicator();
                }
                Map<Category, double> incomeBreakdownByCat =
                    _breakDownByCategory(incomeCatList, incomeList);
                return customPieChart(incomeBreakdownByCat, 'income-chart');
              },
            ),
          ),
        )
      ]),
    );
...
  }

  Widget customPieChart(Map<Category, double> breakdownByCategory, String key) {
    if (breakdownByCategory.values.fold(
        true, (previousValue, element) => previousValue && element == 0.0)) {
      return const Text(
        'No Transactions Recorded',
      );
    }
    return Column(
      children: [
        Padding(
          key: ValueKey(key),
...
      );
    }
    return SizedBox(
      height: 240.0,
      width: 500.0,
      child: BarChart(
          key: const ValueKey('bar-chart'),
          barChartMainData(barChartGroupMainData(expenseList, incomeList))),
    );
  }

  List<double> _calcTransactionSumPerMonth(
      List<Transaction> allTransactionList, bool isExpense) {
...
