import 'package:flutter/material.dart';
import 'package:flutter_slidable/flutter_slidable.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:provider/provider.dart';
import 'package:retreat/main.dart';
import 'package:integration_test/integration_test.dart';
import 'package:retreat/notifiers/budget_list_change_notifier.dart';
import 'package:retreat/notifiers/category_list_change_notifier.dart';
import 'package:retreat/notifiers/current_profile_change_notifier.dart';
import 'package:retreat/notifiers/gamestat_change_notifier.dart';
import 'package:retreat/notifiers/island_change_notifier.dart';
import 'package:retreat/notifiers/shop_items_change_notifier.dart';
import 'package:retreat/notifiers/transaction_list_change_notifier.dart';
import 'package:retreat/services/budget_service.dart';
import 'package:retreat/services/category_service.dart';
import 'package:retreat/services/gamestat_service.dart';
import 'package:retreat/services/island_service.dart';
import 'package:retreat/services/profile_service.dart';
import 'package:retreat/services/shop_service.dart';
import 'package:retreat/services/transactions_service.dart';
import 'package:retreat/widgets/avatar.dart';
import 'package:supabase_flutter/supabase_flutter.dart';

void main() {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  Future<void> addDelay(int ms) async {
    await Future<void>.delayed(Duration(milliseconds: ms));
  }

  Future<void> initSupabase() async {
    await Supabase.initialize(
        url: 'https://ztjtrovgvzujvwbeipqv.supabase.co',
        anonKey:
            'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inp0anRyb3Zndnp1anZ3YmVpcHF2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE2NTI2MjY0NjYsImV4cCI6MTk2ODIwMjQ2Nn0.6pgk8Fm47Sf_7mFb-UouZFqro49gUBLbesw7bQg6Ae4');
  }

  void initProvider() {
    runApp(MultiProvider(providers: [
      ChangeNotifierProvider(
          create: (context) => IslandChangeNotifier(IslandService())),
      ChangeNotifierProvider(
          create: (context) => CurrentProfileChangeNotifier(ProfileService())),
      ChangeNotifierProvider(
          create: (context) =>
              TransactionListChangeNotifier(TransactionService())),
      ChangeNotifierProvider(
          create: (context) => CategoryListChangeNotifier(CategoryService())),
      ChangeNotifierProvider(
          create: (context) => BudgetListChangeNotifier(BudgetService())),
      ChangeNotifierProvider(
          create: (context) => GamestatChangeNotifier(GamestatService())),
      ChangeNotifierProvider(
          create: (context) => ShopItemsChangeNotifier(ShopService())),
    ], child: const MyApp(genIsland: false)));
  }

  void onCurrentPage(WidgetTester tester, String page) {
    expect(find.text(page), findsWidgets);
    tester.printToConsole('-----$page page opened successfully-----');
  }

  group('Authentication Test', () {
    final timeBasedEmail = '${DateTime.now().microsecondsSinceEpoch}@test.com';
    final timeBasedPassword =
        '${DateTime.now().microsecondsSinceEpoch..toString().substring(0, 15)}';

    testWidgets('Sign-up using a randomly generated email and sign-out',
        (WidgetTester tester) async {
      await initSupabase();
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.tap(find.byKey(const ValueKey('sign-up-link')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign Up');

      await tester.enterText(find.byKey(const ValueKey('username-field')),
          'Tester-${timeBasedPassword.substring(0, 6)}');
      await tester.enterText(
          find.byKey(const ValueKey('email-field')), timeBasedEmail);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), 'test123');

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-up-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-up-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await addDelay(3000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('Sign-in using a registered email and sign-out',
        (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(find.byKey(const ValueKey('email-field')),
          'retreat.test123@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), 'test123');

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await addDelay(3000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('Sign-in using a randomly generated email and password',
        (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(
          find.byKey(const ValueKey('email-field')), timeBasedEmail);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), timeBasedPassword);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('Sign-up using an already registered email',
        (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.tap(find.byKey(const ValueKey('sign-up-link')));
      await addDelay(3000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign Up');

      await tester.enterText(
          find.byKey(const ValueKey('username-field')), 'Tester');
      await tester.enterText(find.byKey(const ValueKey('email-field')),
          'retreat.test123@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), 'test123');

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-up-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-up-button')));
      await addDelay(3000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign Up');
    });
  });

  group('CRUD Transaction Test', () {
    const email = 'retreat.test123@gmail.com';
    const password = 'test123';
    final notes = '${DateTime.now().microsecondsSinceEpoch}-test';

    testWidgets('Record transaction', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(find.byKey(const ValueKey('email-field')), email);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), password);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('add-transaction')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Record Transaction');

      await tester.enterText(
          find.byKey(const ValueKey('amount-field')), '123.45');
      //TODO: selecting date
      await tester.tap(find.byKey(const ValueKey('category-dropdown')));
      addDelay(5000);
      await tester.pumpAndSettle();
      await tester.tap(find.text('Education').last);
      await tester.enterText(find.byKey(const ValueKey('notes-field')), notes);

      await tester.tap(find.byKey(const ValueKey('record-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      await tester.tap(find.byIcon(Icons.arrow_back));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('View transaction', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(find.byKey(const ValueKey('email-field')), email);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), password);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('transaction-list')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Overview');

      await tester.tap(find.byIcon(Icons.list_alt_rounded));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'My Transactions');

      await addDelay(5000);
      expect(find.text('Notes: $notes'), findsOneWidget);

      await tester.tap(find.byIcon(Icons.arrow_back));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('Update transaction', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(find.byKey(const ValueKey('email-field')), email);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), password);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('transaction-list')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Overview');

      await tester.tap(find.byIcon(Icons.list_alt_rounded));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'My Transactions');

      await addDelay(8000);
      expect(find.text('Notes: $notes'), findsOneWidget);

      await tester.drag(find.widgetWithText(Slidable, 'Notes: $notes'),
          const Offset(-500.0, 0.0));
      await tester.pumpAndSettle();

      await tester.tap(find.widgetWithIcon(SlidableAction, Icons.edit));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Update Transaction');

      await tester.tap(find.byKey(const ValueKey('category-dropdown')));
      addDelay(5000);
      await tester.pumpAndSettle();
      await tester.tap(find.text('Tax').last);
      await tester.enterText(
          find.byKey(const ValueKey('notes-field')), '$notes-updated');

      await tester.tap(find.byKey(const ValueKey('update-button')));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'My Transactions');

      await addDelay(5000);
      expect(find.text('Notes: $notes-updated'), findsOneWidget);

      await tester.tap(find.byIcon(Icons.arrow_back));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('Delete transaction', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(find.byKey(const ValueKey('email-field')), email);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), password);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('transaction-list')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Overview');

      await tester.tap(find.byIcon(Icons.list_alt_rounded));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'My Transactions');

      await addDelay(5000);
      expect(find.text('Notes: $notes-updated'), findsOneWidget);

      await tester.drag(find.widgetWithText(Slidable, 'Notes: $notes-updated'),
          const Offset(-500.0, 0.0));
      await tester.pumpAndSettle();

      await tester.tap(find.widgetWithIcon(SlidableAction, Icons.delete));
      await addDelay(8000);
      await tester.pumpAndSettle();

      await addDelay(5000);
      expect(find.text('Notes: $notes'), findsNothing);

      await tester.tap(find.byIcon(Icons.arrow_back));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });
  });

  group('Budget Test', () {
    final timeBasedEmail = '${DateTime.now().microsecondsSinceEpoch}@test.com';
    final timeBasedPassword =
        '${DateTime.now().microsecondsSinceEpoch..toString().substring(0, 15)}';
    const initBudget = 500.0;
    const finalBudget = 720.45;

    testWidgets('view, set, and update budget', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.tap(find.byKey(const ValueKey('sign-up-link')));
      await tester.pumpAndSettle();

      // create Account
      onCurrentPage(tester, 'Sign Up');

      await tester.enterText(find.byKey(const ValueKey('username-field')),
          'Tester-${timeBasedPassword.substring(0, 6)}');
      await tester.enterText(
          find.byKey(const ValueKey('email-field')), timeBasedEmail);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), timeBasedPassword);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-up-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-up-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      // successful login
      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('transaction-list')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Overview');

      await tester.tap(find.byIcon(Icons.wallet_giftcard_rounded));
      await addDelay(5000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'My Budget');

      // check initial state of Budget page
      expect(find.text('No recorded budget for this month'), findsOneWidget);
      tester.printToConsole('initial value of budget is correct');

      await tester.tap(find.byKey(const ValueKey('insert-button')));
      await tester.pumpAndSettle();

      // inserting budget
      await tester.enterText(
          find.byKey(const ValueKey('insert-field')), initBudget.toString());
      await tester.tap(find.byKey(const ValueKey('record-budget-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      expect(find.byKey(const ValueKey('budget-chart')), findsOneWidget);
      tester.printToConsole('budget chart is generated');

      // correct budget set
      expect(find.text("Budget this month: \$ $initBudget"), findsOneWidget);
      tester.printToConsole('budget is correctly set');

      await tester.tap(find.byKey(const ValueKey('update-button')));
      await tester.pumpAndSettle();

      // updating budget
      await tester.enterText(
          find.byKey(const ValueKey('update-field')), finalBudget.toString());
      await tester.tap(find.byKey(const ValueKey('update-budget-button')));
      await addDelay(8000);
      await tester.pumpAndSettle();
      await tester.tap(find.byKey(const ValueKey('yes-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      await tester.tap(find.byIcon(Icons.arrow_back));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });
  });

  group('Overview Test', () {
    final timeBasedEmail = '${DateTime.now().microsecondsSinceEpoch}@test.com';
    final timeBasedPassword =
        '${DateTime.now().microsecondsSinceEpoch..toString().substring(0, 15)}';

    const email = 'retreat.test123@gmail.com';
    const password = 'test123';

    testWidgets('Initial Overview', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.tap(find.byKey(const ValueKey('sign-up-link')));
      await tester.pumpAndSettle();

      // create Account
      onCurrentPage(tester, 'Sign Up');

      await tester.enterText(find.byKey(const ValueKey('username-field')),
          'Tester-${timeBasedPassword.substring(0, 6)}');
      await tester.enterText(
          find.byKey(const ValueKey('email-field')), timeBasedEmail);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), timeBasedPassword);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-up-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-up-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      // successful login
      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('transaction-list')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Overview');

      expect(find.text('No Transactions Recorded'), findsNWidgets(3));

      await tester.tap(find.byIcon(Icons.arrow_back));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });

    testWidgets('Overview with Data', (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.enterText(find.byKey(const ValueKey('email-field')), email);
      await tester.enterText(
          find.byKey(const ValueKey('password-field')), password);

      await tester.dragUntilVisible(
        find.byKey(const ValueKey('sign-in-button')),
        find.byType(SingleChildScrollView),
        const Offset(0, 50),
      );

      await tester.tap(find.byKey(const ValueKey('sign-in-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('transaction-list')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Overview');

      expect(find.byKey(const ValueKey('bar-chart')), findsOneWidget);

      await tester.dragFrom(
          tester.getCenter(find.byKey(const ValueKey('bar-chart'))),
          const Offset(0, -700));
      await addDelay(8000);
      await tester.pumpAndSettle();

      expect(find.byKey(const ValueKey('expense-chart')), findsOneWidget);

      await tester.dragFrom(
          tester.getCenter(find.byKey(const ValueKey('expense-chart'))),
          const Offset(0, -700));
      await addDelay(8000);
      await tester.pumpAndSettle();

      expect(find.byKey(const ValueKey('income-chart')), findsOneWidget);

      await tester.tap(find.byIcon(Icons.arrow_back));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Home');

      await tester.tap(find.byKey(const ValueKey('settings')));
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Settings');

      await tester.tap(find.byKey(const ValueKey('sign-out-button')));
      await addDelay(10000);
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');
    });
  });

  group('Profile Test', () {
    final timeBasedEmail = '${DateTime.now().microsecondsSinceEpoch}@test.com';
    final timeBasedPassword =
        '${DateTime.now().microsecondsSinceEpoch..toString().substring(0, 15)}';

    testWidgets('Correct initial profile and change username',
        (WidgetTester tester) async {
      initProvider();
      await tester.pumpAndSettle();

      onCurrentPage(tester, 'Sign In');

      await tester.tap(find.byKey(const ValueKey('sign-up-link')));
      await tester.pumpAndSettle();

      // create Account
      onCurrentPage(tester, 'Sign Up');

      await tester.enterText(find.byKey(const ValueKey('username-field')),
          'Tester-${timeBasedPassword.substring(0, 6)}');
      await tester.enterText(
